tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_deny_cyclic_globals/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Variable not in scope
  ┌─ src/main.nr:3:25
  │
3 │         global B: u32 = A;
  │                         - Could not find variable
  │

error: This global recursively depends on itself
  ┌─ src/main.nr:2:25
  │
2 │         global A: u32 = B;
  │                         -
  │

error: Dependency cycle found
  ┌─ src/main.nr:2:16
  │
2 │         global A: u32 = B;
  │                - 'A' recursively depends on itself: A -> B -> A
  │

Aborting due to 3 previous errors
